# enterprise-ai-operations-copilot

./: .env.example  .gitignore  Dockerfile  Makefile  OPERATIONS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py  schemas.py
app/api/: __init__.py  routes.py
app/core/: config.py
app/domain/: __init__.py  models.py  prompts.py
app/integrations/: opensearch_store.py  postgres_store.py  redis_cache.py
app/observability/: metrics.py
app/repositories/: __init__.py  base.py  jsonl.py  memory.py
app/services/: assistant.py  enrichment.py  intake.py  investigation.py  runbooks.py  stakeholder.py  workflow.py
docs/: architecture.md  deployment.md  private-positioning.md
fixtures/: runbooks.json  sample_incident.json
frontend/: README.md  index.html  package.json  vite.config.js
frontend/src/: App.jsx  api.js  demoData.js  styles.css
infra/grafana/dashboards/: ai_ops_overview.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
scripts/: seed_runbooks.py
tests/: test_assistant_service.py  test_intake.py  test_runbooks.py  test_workflow.py
